--- a/public/assets/css/clean_order_pop.css
+++ b/public/assets/css/clean_order_pop.css
@@ -48,10 +48,10 @@
 .now_clean{background-image: url('/image/main/clean_now.png');}
 .clean_select_box ul li label p{line-height: 1.3;}
 .clean_select_box ul li span{font-size: 17px; margin-bottom: 10px; display: block; font-weight: 500;}
-.clean_select_box ul li input[type="radio"]:checked + label.move_clean{background-image: url('/image/main/clean_moving_hover.png');}
-.clean_select_box ul li input[type="radio"]:checked + label.new_clean{background-image: url('/image/main/clean_new_hover.png');}
-.clean_select_box ul li input[type="radio"]:checked + label.now_clean{background-image: url('/image/main/clean_now_hover.png');}
-.clean_select_box ul li input[type="radio"]:checked + label{background-color: var(--clean-theme-color); color: #fff; border-color: var(--clean-theme-color);}
+.clean_select_box ul li input[type="radio"]:checked + div label.move_clean{background-image: url('/image/main/clean_moving_hover.png');}
+.clean_select_box ul li input[type="radio"]:checked + div label.new_clean{background-image: url('/image/main/clean_new_hover.png');}
+.clean_select_box ul li input[type="radio"]:checked + div label.now_clean{background-image: url('/image/main/clean_now_hover.png');}
+.clean_select_box ul li input[type="radio"]:checked + div label{background-color: var(--clean-theme-color); color: #fff; border-color: var(--clean-theme-color);}
 .clean_nextBtn span.btn.btn-secondary{border: 2px solid var(--clean-contents-color); color: var(--clean-contents-color);}
 .clean_nextBtn span.btn.btn-secondary:hover{background-color: var(--clean-contents-color);}
 
@@ -133,25 +133,37 @@
 .clean_popupCon .popup_close{border: 1px solid var(--clean-contents-color); color: var(--clean-contents-color);}
 .clean_popupCon .popup_close:hover{background-color: var(--clean-contents-color); color: #fff;}
 
+.clean_box{height: 173px;}
+
 
 
 @media screen and (max-width: 840px){
 
-    #popcleanmodal .top-steps-wrap{width: 100%;}
+    #popcleanmodal .top-steps-wrap{width: 100%; justify-content: center;}
     #popcleanmodal .top-steps-wrap div[class^='step-']{width: 25px; height: 25px; line-height: 25px;}
     #popcleanmodal .clean_body{padding: 20px;}
-    .clean_select_box ul li label{background-size: 60px; padding-top: 80px; font-size: 12px;}
+    .clean_select_box ul li label{background-size: 60px; padding-top: 100px; font-size: 12px; height: 100%;}
     .clean_select_box ul li span{font-size: 14px; font-weight: 600;}
-    .clean_select_box ul li label.new_clean{background-size: 25%;}
+    .clean_select_box ul li label.new_clean{background-size: 45px;}
 
-    .clean_body02, .clean_body05{padding: 0 20px 20px;}
-    #popcleanmodal .table-condensed{width: 100%; display: block;}
+    .clean_body02, .clean_body05{padding: 0 0 20px;}
+    #popcleanmodal .table-condensed{width: 100%; display: flex; flex-direction: column; align-items: center;}
 
-    .clean_body03 div ul li label{padding: 0 15px; height: 50px;}
+    .clean_body03 div ul li label{padding: 0 15px; height: 50px; line-height: 1.2;}
+    
+    .clean_option ul li label{font-size: 12px;}
 
     .clean_option{width: 100%;}
     .clean_option.nooption ul li label span{font-size: 12px;}
 
+    .clean_box{height: 150px;}
+
+
+}
+
+@media screen and (max-width: 670px){
+
+    .clean_select_box ul li label{padding-top: 80px;}
 
 }
 
